--- a/ticket-a.html
+++ b/ticket-a.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ticket_test01</title>
 </head>
 <body>
     
+    <form action="" method="post" name="formAdd" id="formAdd">
+        請輸入姓名：<input type="text" name="cName" id="cName"><br/>
+        請輸入生日：<input type="date" name="cBirthday" id="cBirthday"><br/>
+        請輸入Email：<input type="text" name="cEmail" id="cEmail"><br/>
+        <input type="hidden" name="action" value="add">
+        <input type="submit" name="button" value="新增資料">
+        <input type="reset" name="button2" value="重新填寫">
+
 </body>
 </html>
